--- a/Views/Home/Encode.cshtml
+++ b/Views/Home/Encode.cshtml
@@ -9,6 +9,7 @@
 <div class="section">
     <div class="header">Encoding-type</div>
     @Html.Partial("TypesList", HtmlEncoder.Controllers.EncodeController.TypesList)
+    <div class="clear"></div>
 </div>
 
 <div class="section">
@@ -17,7 +18,7 @@
 </div>
 
 <div class="section">
-    <button id="encode-button">Encode</button>
+    <button id="encode-button">Encode It!</button>
 </div>
 
 <div class="section">
