--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - HTML Encoder by Seb Nilsson</title>
-    <link href="~/content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/content/html5.js"></script>
 </head>
 <body>
