Added spinner when request is loading.

--- a/Views/Home/Encode.cshtml
+++ b/Views/Home/Encode.cshtml
@@ -17,7 +17,7 @@
     @Html.TextArea("source-text", string.Empty, 0, 0, null)
 </div>
 
-<div class="section">
+<div id="button-section" class="section">
     <button id="encode-button">Encode It!</button>
 </div>
 
