--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    
     <title>@ViewBag.Title - HTML Encoder by Seb Nilsson</title>
+    <link rel="shortcut icon" href="~/favicon.ico"/>
+
     <link href="~/content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/content/html5.js"></script>
 </head>
